Update title on main pages with more accurate descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>About - Hanis</title>
+    <title>About - Hanis Noor</title>
     <meta
       name="description"
       content="About Hanis Noor, a front-end web designer and developer"
