--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Contact - Hanis</title>
+    <title>Contact - Hanis Noor</title>
     <meta
       name="description"
       content="How to contact Hanis Noor, a front-end web designer and developer"
