--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hanis</title>
+    <title>Hanis Noor - Web Designer and Developer</title>
     <meta
       name="description"
-      content="Portfolio of Hanis Noor, a front-end web designer and developer"
+      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
     />
     <meta name="theme-color" content="#deebfe;" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
