--- a/work/index.html
+++ b/work/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Work - Hanis</title>
+    <title>Work - Hanis Noor</title>
     <meta
       name="description"
       content="A collection of work by Hanis Noor, a front-end web designer and developer"
