Update email on main, about and contact pages

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
                 these ensure you find success in your business online, no matter
                 your business needs. So if you have a project you’d like to work
                 on with me,
-                <a href="mailto:hanisno@outlook.com">let’s get talking!</a>
+                <a href="mailto:hanis@hanisnoor.com">let’s get talking!</a>
               </p>
             </div>
             <div class="image-container">
