--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@
             <h1>Say hello</h1>
             <div class="info-sub" id="email-address">
               <h3>Send me an email</h3>
-              <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>
+              <a href="mailto:hanis@hanisnoor.com">hanis@hanisnoor.com</a>
             </div>
             <div class="info-sub" id="phone-number">
               <h3>Feel like talking?</h3>
