--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
             <h1>Want to work with me?</h1>
             <p>
               I love to design and make things. If you have a website or project
-              in mind or you just want to say hey, then get in touch.
+              in mind or you just want to say hello, then get in touch.
             </p>
             <div class="button-container">
-              <a href="mailto:hanisno@outlook.com" class="button"
+              <a href="mailto:hanis@hanisnoor.com" class="button"
                 ><i class="fas fa-envelope"></i> Send email</a
               >
             </div>
