Update pages with Tea Time project

--- a/work/index.html
+++ b/work/index.html
@@ -106,12 +106,38 @@
                 </div>
               </article>
             </a>
-            <a href="jubilee-austen-overview.html">
+            <a href="../work/tea-time-overview.html">
               <article data-aos-delay="500">
+                <img
+                  src="../img/tea-time-preview.png"
+                  alt="Tea Time website preview on desktop browser"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Tea Time</h3>
+                  <span>JavaScript</span>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Tea Time is a JavaScript-based interactive clock that
+                    suggests a type of tea based on the time of the day. Users
+                    can input custom tea times or click on the "Thirs-tea?"
+                    button for a special drink suggestion.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="jubilee-austen-overview.html">
+              <article id="article-b" data-aos-delay="500">
                 <img
                   src="../img/jubilee-austen-preview.png"
                   alt="Jubilee Austen website preview on desktop browser"
-                  data-aos="fade-right"
+                  data-aos="fade-left"
                   data-aos-duration="1500"
                 />
                 <div
