--- a/work/tea-time-overview.html
+++ b/work/tea-time-overview.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jubilee Austen - Work Overview</title>
+    <title>Tea Time - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -57,7 +57,7 @@
     <main>
       <section class="work-overview">
         <div class="content-wrapper">
-          <h1>Jubilee Austen</h1>
+          <h1>Tea Time</h1>
           <div
             class="image-slides-outer"
             data-aos="zoom-in"
@@ -66,8 +66,8 @@
           >
             <div class="image-slides-inner">
               <img
-                src="../img/jubilee-austen-preview.png"
-                alt="Jubilee Austen website preview on desktop browser"
+                src="../img/tea-time-preview.png"
+                alt="Tea Time page preview on desktop browser"
                 class="active"
               />
             </div>
@@ -82,23 +82,26 @@
             <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Jubilee Austen is a portfolio for a fictional web developer.
-                HTML and CSS was used to create a static website.
+                Tea Time is a JavaScript-based interactive clock that suggests a
+                type of tea based on the time of the day. Users can input custom
+                tea times or click on the "Thirs-tea?" button for a special
+                drink suggestion.
               </p>
             </div>
             <div class="work-overview-sub">
               <h3>Completed</h3>
-              <p>April 2020</p>
+              <p>September 2020</p>
             </div>
             <div class="work-overview-sub">
               <h3>Tech</h3>
+              <span>JavaScript</span>
               <span>HTML</span>
               <span>CSS</span>
             </div>
             <div class="work-overview-sub">
               <div class="button-container">
                 <a
-                  href="https://hanisno.github.io/jubilee-austen/"
+                  href="https://hanisno.github.io/tea-time/"
                   target="_blank"
                   class="button"
                   id="button-full-width"
@@ -107,7 +110,7 @@
               </div>
               <div class="button-container">
                 <a
-                  href="https://github.com/hanisno/jubilee-austen"
+                  href="https://github.com/hanisno/tea-time"
                   target="_blank"
                   class="button"
                   id="button-full-width"
@@ -117,10 +120,10 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="tea-time-overview.html" class="button"
+            <a href="rogue-pickings-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="nexus-overview.html" class="button"
+            <a href="jubilee-austen-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
