--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
               data-aos-duration="500"
               data-aos-delay="800"
             >
-              <h2>
-                I can build one for you.
-              </h2>
+              <h2>I can build one for you.</h2>
             </div>
             <h2
               data-aos="fade-in"
@@ -168,11 +166,11 @@
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen-overview.html">
+            <a href="work/tea-time-overview.html">
               <article data-aos-delay="500">
                 <img
-                  src="img/jubilee-austen-preview.png"
-                  alt="Jubilee Austen website preview on desktop browser"
+                  src="img/tea-time-preview.png"
+                  alt="Tea Time website preview on desktop browser"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
@@ -181,12 +179,15 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Jubilee Austen</h3>
+                  <h3>Tea Time</h3>
+                  <span>JavaScript</span>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Jubilee Austen is a portfolio for a fictional web developer.
-                    HTML and CSS was used to create a static website.
+                    Tea Time is a JavaScript-based interactive clock that
+                    suggests a type of tea based on the time of the day. Users
+                    can input custom tea times or click on the "Thirs-tea?"
+                    button for a special drink suggestion.
                   </p>
                 </div>
               </article>
