Update position and images of Tea Time project

--- a/index.html
+++ b/index.html
@@ -118,12 +118,38 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="work/nexus-overview.html">
+            <a href="work/tea-time-overview.html">
               <article>
+                <img
+                  src="img/tea-time-preview.png"
+                  alt="Tea Time website previews on desktop and phone browsers"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Tea Time</h3>
+                  <span>JavaScript</span>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Tea Time is a JavaScript-based interactive clock that
+                    suggests a type of tea based on the time of the day. Users
+                    can input custom tea times or click on the "Thirs-tea?"
+                    button for a special drink suggestion.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="work/nexus-overview.html">
+              <article id="article-b" data-aos-delay="300">
                 <img
                   src="img/nexus-preview.png"
                   alt="Nexus website previews on desktop and phone browsers"
-                  data-aos="fade-right"
+                  data-aos="fade-left"
                   data-aos-duration="1500"
                 />
                 <div
@@ -143,11 +169,11 @@
               </article>
             </a>
             <a href="work/rogue-pickings-overview.html">
-              <article id="article-b" data-aos-delay="300">
+              <article data-aos-delay="500">
                 <img
                   src="img/rogue-pickings-preview.png"
                   alt="Rogue Pickings website previews on desktop and phone browsers"
-                  data-aos="fade-left"
+                  data-aos="fade-right"
                   data-aos-duration="1500"
                 />
                 <div
@@ -162,32 +188,6 @@
                     Rogue Pickings is a website for an imaginary food truck
                     company. It features a responsive one-page website coded
                     using HTML and CSS.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="work/tea-time-overview.html">
-              <article data-aos-delay="500">
-                <img
-                  src="img/tea-time-preview.png"
-                  alt="Tea Time website preview on desktop browser"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Tea Time</h3>
-                  <span>JavaScript</span>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Tea Time is a JavaScript-based interactive clock that
-                    suggests a type of tea based on the time of the day. Users
-                    can input custom tea times or click on the "Thirs-tea?"
-                    button for a special drink suggestion.
                   </p>
                 </div>
               </article>
