--- a/work/index.html
+++ b/work/index.html
@@ -58,59 +58,11 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="nexus-overview.html">
+            <a href="../work/tea-time-overview.html">
               <article>
                 <img
-                  src="../img/nexus-preview.png"
-                  alt="Nexus website previews on desktop and phone browsers"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Nexus</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Nexus is a fictional space travel website that is coded with
-                    HTML and CSS. It is fully responsive across mobile, tablet
-                    and desktop devices.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="rogue-pickings-overview.html">
-              <article id="article-b" data-aos-delay="300">
-                <img
-                  src="../img/rogue-pickings-preview.png"
-                  alt="Rogue Pickings website previews on desktop and phone browsers"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Rogue Pickings</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Rogue Pickings is a website for an imaginary food truck
-                    company. It features a responsive one-page website coded
-                    using HTML and CSS.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="../work/tea-time-overview.html">
-              <article data-aos-delay="500">
-                <img
                   src="../img/tea-time-preview.png"
-                  alt="Tea Time website preview on desktop browser"
+                  alt="Tea Time website previews on desktop and mobile browsers"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
@@ -132,8 +84,56 @@
                 </div>
               </article>
             </a>
+            <a href="nexus-overview.html">
+              <article id="article-b" data-aos-delay="300">
+                <img
+                  src="../img/nexus-preview.png"
+                  alt="Nexus website previews on desktop and phone browsers"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Nexus</h3>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Nexus is a fictional space travel website that is coded with
+                    HTML and CSS. It is fully responsive across mobile, tablet
+                    and desktop devices.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="rogue-pickings-overview.html">
+              <article data-aos-delay="500">
+                <img
+                  src="../img/rogue-pickings-preview.png"
+                  alt="Rogue Pickings website previews on desktop and phone browsers"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Rogue Pickings</h3>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Rogue Pickings is a website for an imaginary food truck
+                    company. It features a responsive one-page website coded
+                    using HTML and CSS.
+                  </p>
+                </div>
+              </article>
+            </a>
             <a href="jubilee-austen-overview.html">
-              <article id="article-b" data-aos-delay="500">
+              <article id="article-b" data-aos-delay="700">
                 <img
                   src="../img/jubilee-austen-preview.png"
                   alt="Jubilee Austen website preview on desktop browser"
