--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -117,10 +117,10 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="tea-time-overview.html" class="button"
+            <a href="rogue-pickings-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="nexus-overview.html" class="button"
+            <a href="tea-time-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
