--- a/work/nexus-overview.html
+++ b/work/nexus-overview.html
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="jubilee-austen-overview.html" class="button"
+            <a href="tea-time-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
             <a href="rogue-pickings-overview.html" class="button"
