--- a/work/tea-time-overview.html
+++ b/work/tea-time-overview.html
@@ -66,10 +66,22 @@
           >
             <div class="image-slides-inner">
               <img
-                src="../img/tea-time-preview.png"
-                alt="Tea Time page preview on desktop browser"
+                src="../img/tea-time-pc.png"
+                alt="Tea Time website preview on desktop browser"
                 class="active"
               />
+              <img
+                src="../img/tea-time-tablet.png"
+                alt="Tea Time website preview on tablet browser"
+              />
+              <img
+                src="../img/tea-time-ipx.png"
+                alt="Tea Time website preview on iPhone X browser"
+              />
+            </div>
+            <div class="image-slides-buttons">
+              <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
+              <a href="#" class="next"><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
           <div
@@ -120,10 +132,10 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="rogue-pickings-overview.html" class="button"
+            <a href="jubilee-austen-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="jubilee-austen-overview.html" class="button"
+            <a href="nexus-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
