Add social media meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <title>Hanis Noor - Web Designer and Developer</title>
+    <meta name="title" content="Hanis Noor - Web Designer and Developer" />
     <meta
       name="description"
       content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hanisnoor.com/" />
+    <meta
+      property="og:title"
+      content="Hanis Noor - Web Designer and Developer"
+    />
+    <meta
+      property="og:description"
+      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
+    />
+    <meta property="og:image" content="hanis-noor-preview.jpg" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hanisnoor.com/" />
+    <meta
+      property="twitter:title"
+      content="Hanis Noor - Web Designer and Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
+    />
+    <meta property="twitter:image" content="hanis-noor-preview.jpg" />
     <meta name="theme-color" content="#deebfe;" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
