Fix meta img link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       property="og:description"
       content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
     />
-    <meta property="og:image" content="hanis-noor-preview.jpg" />
+    <meta
+      property="og:image"
+      content="https://hanisnoor.com/hanis-noor-preview.jpg"
+    />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://hanisnoor.com/" />
     <meta
@@ -29,7 +32,10 @@
       property="twitter:description"
       content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
     />
-    <meta property="twitter:image" content="hanis-noor-preview.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://hanisnoor.com/hanis-noor-preview.jpg"
+    />
     <meta name="theme-color" content="#deebfe;" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
