--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -185,7 +185,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p><a href="/">Hanis</a> 2020</p>
+      <p>Created with ♥ by <a href="/">Hanis</a></p>
       <img src="../img/waves-footer.svg" alt="" />
     </div>
 
