Update description on work overview

--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -82,8 +82,9 @@
             <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Jubilee Austen is a portfolio for a fictional web developer.
-                HTML and CSS was used to create a static website.
+                Jubilee Austen is a portfolio for a fictional web developer. A
+                design comp was provided and HTML and CSS was used to create a
+                static website.
               </p>
             </div>
             <div class="work-overview-sub">
