--- a/work/nexus-overview.html
+++ b/work/nexus-overview.html
@@ -95,8 +95,8 @@
               <h3>Description</h3>
               <p>
                 Nexus is a fictional space travel website that is coded with
-                HTML and CSS. It is fully responsive across mobile, tablet and
-                desktop devices.
+                HTML and CSS based on a design comp. It is fully responsive
+                across mobile, tablet and desktop devices.
               </p>
             </div>
             <div class="work-overview-sub">
