--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -95,8 +95,8 @@
               <h3>Description</h3>
               <p>
                 Rogue Pickings is a website for an imaginary food truck company.
-                It features a responsive one-page website coded using HTML and
-                CSS.
+                It is styled based on a design comp and features a responsive
+                one-page website coded using HTML and CSS.
               </p>
             </div>
             <div class="work-overview-sub">
