Update description on Tea Time overview

--- a/work/tea-time-overview.html
+++ b/work/tea-time-overview.html
@@ -97,7 +97,13 @@
                 Tea Time is a JavaScript-based interactive clock that suggests a
                 type of tea based on the time of the day. Users can input custom
                 tea times or click on the "Thirs-tea?" button for a special
-                drink suggestion.
+                drink suggestion. Its basic functionality is inspired from the
+                <a
+                  href="https://codepen.io/codifiedconcepts/pen/bwgxRq"
+                  target="_blank"
+                  >LOLCat Clock</a
+                >
+                by Skillcrush but personalized to my like of tea.
               </p>
             </div>
             <div class="work-overview-sub">
