Update project descriptions

--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -82,7 +82,7 @@
             <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Jubilee Austen is a portfolio for a fictional web developer. A
+                Jubilee Austen is a portfolio concept for a web developer. A
                 design comp was provided and HTML and CSS was used to create a
                 static website.
               </p>
