--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -94,9 +94,9 @@
             <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Rogue Pickings is a website for an imaginary food truck company.
-                It is styled based on a design comp and features a responsive
-                one-page website coded using HTML and CSS.
+                Rogue Pickings is a sample site for a food truck company. It is
+                styled based on a design comp and features a responsive one-page
+                website coded using HTML and CSS.
               </p>
             </div>
             <div class="work-overview-sub">
