--- a/work/index.html
+++ b/work/index.html
@@ -101,7 +101,7 @@
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Nexus is a fictional space travel website that is coded with
+                    Nexus is a space travel website concept that is coded with
                     HTML and CSS. It is fully responsive across mobile, tablet
                     and desktop devices.
                   </p>
@@ -125,9 +125,9 @@
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Rogue Pickings is a website for an imaginary food truck
-                    company. It features a responsive one-page website coded
-                    using HTML and CSS.
+                    Rogue Pickings is a sample site for a food truck company. It
+                    features a responsive one-page website coded using HTML and
+                    CSS.
                   </p>
                 </div>
               </article>
@@ -149,7 +149,7 @@
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Jubilee Austen is a portfolio for a fictional web developer.
+                    Jubilee Austen is a portfolio concept for a web developer.
                     HTML and CSS was used to create a static website.
                   </p>
                 </div>
