--- a/work/nexus-overview.html
+++ b/work/nexus-overview.html
@@ -94,9 +94,9 @@
             <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Nexus is a fictional space travel website that is coded with
-                HTML and CSS based on a design comp. It is fully responsive
-                across mobile, tablet and desktop devices.
+                Nexus is a space travel website concept that is coded with HTML
+                and CSS based on a design comp. It is fully responsive across
+                mobile, tablet and desktop devices.
               </p>
             </div>
             <div class="work-overview-sub">
