--- a/work/tea-time-overview.html
+++ b/work/tea-time-overview.html
@@ -97,7 +97,7 @@
                 Tea Time is a JavaScript-based interactive clock that suggests a
                 type of tea based on the time of the day. Users can input custom
                 tea times or click on the "Thirs-tea?" button for a special
-                drink suggestion. Its basic functionality is inspired from the
+                drink suggestion. Its basic functionality is inspired by the
                 <a
                   href="https://codepen.io/codifiedconcepts/pen/bwgxRq"
                   target="_blank"
