Update photo of me

--- a/about/index.html
+++ b/about/index.html
@@ -74,8 +74,8 @@
             </div>
             <div class="image-container">
               <img
-                src="../img/portrait-illustration.png"
-                alt="Illustrated portrait"
+                src="../img/me.png"
+                alt="Photo of me"
               />
             </div>
           </div>
