Update with new project Kopikaw files

--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Tea Time</h3>
-                  <span>JavaScript</span>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Tea Time is a JavaScript-based interactive clock that
                     suggests a type of tea based on the time of the day. Users
@@ -187,8 +185,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Nexus</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Nexus is a space travel website concept that is coded with
                     HTML and CSS. It is fully responsive across mobile, tablet
@@ -211,12 +208,35 @@
                   data-aos-duration="1500"
                 >
                   <h3>Rogue Pickings</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Rogue Pickings is a sample site for a food truck company. It
                     features a responsive one-page website coded using HTML and
                     CSS.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="work/kopikaw-overview.html">
+              <article id="article-b" data-aos-delay="700">
+                <img
+                  src="img/preview-kopikaw.png"
+                  alt="Kopikaw logo preview"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Kopikaw Coffee</h3>
+                  <span>Brand Identity</span>
+                  <p>
+                    Kopikaw is a coffee shop concept. It features a full brand
+                    identity guideline which includes the color scheme, logo,
+                    typescale, and imagery to support the brand personality and
+                    messaging.
                   </p>
                 </div>
               </article>
