--- a/work/index.html
+++ b/work/index.html
@@ -72,9 +72,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Tea Time</h3>
-                  <span>JavaScript</span>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Tea Time is a JavaScript-based interactive clock that
                     suggests a type of tea based on the time of the day. Users
@@ -98,8 +96,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Nexus</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Nexus is a space travel website concept that is coded with
                     HTML and CSS. It is fully responsive across mobile, tablet
@@ -122,8 +119,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Rogue Pickings</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Rogue Pickings is a sample site for a food truck company. It
                     features a responsive one-page website coded using HTML and
@@ -132,11 +128,11 @@
                 </div>
               </article>
             </a>
-            <a href="jubilee-austen-overview.html">
+            <a href="kopikaw-overview.html">
               <article id="article-b" data-aos-delay="700">
                 <img
-                  src="../img/jubilee-austen-preview.png"
-                  alt="Jubilee Austen website preview on desktop browser"
+                  src="../img/preview-kopikaw.png"
+                  alt="Kopikaw preview"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -145,9 +141,32 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
+                  <h3>Kopikaw Coffee</h3>
+                  <span>Brand Identity</span>
+                  <p>
+                    Kopikaw is a coffee shop concept. It features a full brand
+                    identity guideline which includes the color scheme, logo,
+                    typescale, and imagery to support the brand personality and
+                    messaging.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="jubilee-austen-overview.html">
+              <article data-aos-delay="900">
+                <img
+                  src="../img/jubilee-austen-preview.png"
+                  alt="Jubilee Austen website preview on desktop browser"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
                   <h3>Jubilee Austen</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>Web Development</span>
                   <p>
                     Jubilee Austen is a portfolio concept for a web developer.
                     HTML and CSS was used to create a static website.
