--- a/work/kopikaw-overview.html
+++ b/work/kopikaw-overview.html
@@ -2,12 +2,12 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rogue Pickings - Work Overview</title>
+    <title>Kopikaw Coffee - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#deebfe" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../icon.png" />
@@ -57,7 +57,7 @@
     <main>
       <section class="work-overview">
         <div class="content-wrapper">
-          <h1>Rogue Pickings</h1>
+          <h1>Kopikaw Coffee</h1>
           <div
             class="image-slides-outer"
             data-aos="zoom-in"
@@ -66,22 +66,10 @@
           >
             <div class="image-slides-inner">
               <img
-                src="../img/rogue-pickings-pc.png"
-                alt="Rogue Pickings website preview on desktop browser"
+                src="../img/preview-kopikaw.png"
+                alt="Kopikaw website preview on desktop browser"
                 class="active"
               />
-              <img
-                src="../img/rogue-pickings-tablet.png"
-                alt="Rogue Pickings website preview on tablet browser"
-              />
-              <img
-                src="../img/rogue-pickings-ipx.png"
-                alt="Rogue Pickings website preview on iPhone X browser"
-              />
-            </div>
-            <div class="image-slides-buttons">
-              <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
-              <a href="#" class="next"><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
           <div
@@ -92,48 +80,54 @@
             data-aos-anchor="top-top"
           >
             <div class="work-overview-sub">
-              <h3>Description</h3>
+              <h3>Objective</h3>
               <p>
-                Rogue Pickings is a sample site for a food truck company. It is
-                styled based on a design comp and features a responsive one-page
-                website coded using HTML and CSS.
+                To develop an entire brand identity and a set of design
+                deliverables to launch Kopikaw Coffee shop and support their
+                brand personality and messaging.
               </p>
             </div>
             <div class="work-overview-sub">
-              <h3>Completed</h3>
-              <p>May 2020</p>
+              <h3>Problem</h3>
+              <p>
+                Kopikaw Coffee has funding and a great location in a popular and
+                artsy suburb and now needs a brand that fits their location and
+                unique range of products. They are serving specialty coffee and
+                tea blends as well as a small variety of snacks.
+              </p>
+            </div>
+            <div class="work-overview-sub">
+              <h3>Solution</h3>
+              <p>
+                Build a complete brand identity style guide which includes a
+                cohesive color scheme, logo, typescale, icons, and imagery to
+                capture the energetic, playful, and bold personality of the
+                brand. This will create a strong brand identity that the target
+                audience will love, inspiring trust and loyalty that boosts
+                business.
+              </p>
             </div>
             <div class="work-overview-sub">
               <h3>Tech</h3>
-              <span>HTML</span>
-              <span>CSS</span>
+              <span>Illustrator</span>
             </div>
             <div class="work-overview-sub">
               <div class="button-container">
                 <a
-                  href="https://hanisno.github.io/rogue-pickings/"
+                  href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >Live Demo</a
-                >
-              </div>
-              <div class="button-container">
-                <a
-                  href="https://github.com/hanisno/rogue-pickings"
-                  target="_blank"
-                  class="button"
-                  id="button-full-width"
-                  >Source Code</a
+                  >Full Style Guide</a
                 >
               </div>
             </div>
           </div>
           <div class="pagination">
-            <a href="nexus-overview.html" class="button"
+            <a href="rogue-pickings-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="kopikaw-overview.html" class="button"
+            <a href="jubilee-austen-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
