--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -121,7 +121,7 @@
             <a href="rogue-pickings-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="tea-time-overview.html" class="button"
+            <a href="kopikaw-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
