--- a/work/kopikaw-overview copy.html
+++ b/work/kopikaw-overview copy.html
@@ -101,17 +101,16 @@
         <section>
           <figure><img src="../img/main-img.png" /></figure>
         </section>
-          
-        <section class="main-detail">
-          <div class="main-detail-item">
+          <section class="objective">
             <h3>Objective</h3>
             <p>
               To develop an entire brand identity and a set of design
               deliverables to launch Kopikaw Coffee shop and support their brand
               personality and messaging.
             </p>
-          </div>
-          <div class="main-detail-item">
+          </section>
+
+          <section class="problem">
             <h3>Problem</h3>
             <p>
               Kopikaw Coffee has funding and a great location in a popular and
@@ -119,8 +118,9 @@
               unique range of products. They are serving specialty coffee and
               tea blends as well as a small variety of snacks.
             </p>
-          </div>
-          <div class="main-detail-item">
+          </section>
+
+          <section class="solution">
             <h3>Solution</h3>
             <p>
               Build a complete brand identity style guide which includes a
@@ -129,16 +129,19 @@
               This will create a strong brand identity that the target audience
               will love, inspiring trust and loyalty that boosts business.
             </p>
-          </div>
-          <div class="main-detail-item">
+          </section>
+
+          <section class="style-guide">
             <h3>Style guide</h3>
             <figure><img src="../img/art.png"></figure>
-          </div>
-          <div class="main-detail-item">
+          </section>
+
+          <section class="wireframe">
             <h3>Wireframe</h3>
             <figure><img src="../img/art.png"></figure>
-          </div>
-          <div class="main-detail-item">
+          </section>
+
+          <section class="full-design">
             <h3>Full design</h3>
             <div class="button-container">
               <a
@@ -154,7 +157,7 @@
         </section>
 
         <section class="other-work-links">
-          <h1>Other work</h1>
+          <h3>Other work</h3>
           <a href="index.html" class="button" id="button-full-width">All</a>
           <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
           <a href="nexus-overview.html" class="button" id="button-full-width">Nexus</a>
