Style work page tablet styles

--- a/work/kopikaw-overview copy.html
+++ b/work/kopikaw-overview copy.html
@@ -101,6 +101,7 @@
         <section>
           <figure><img src="../img/main-img.png" /></figure>
         </section>
+        
           <section class="objective">
             <h3>Objective</h3>
             <p>
@@ -143,18 +144,20 @@
 
           <section class="full-design">
             <h3>Full design</h3>
-            <div class="button-container">
-              <a
-                href="https://github.com/hanisno/jubilee-austen"
-                target="_blank"
-                class="button"
-                id="button-full-width"
-                >Live Demo</a
-              >
+            <div class="full-design-content">
+              <div class="button-container">
+                <a
+                  href="https://github.com/hanisno/jubilee-austen"
+                  target="_blank"
+                  class="button"
+                  >Live Demo</a
+                >
+              </div>
             </div>
-            <figure><img src="../img/art.png"></figure>
           </div>
         </section>
+
+        <section><figure><img src="../img/art.png"></figure></section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
